	 (libspectrum_0_3_0-branch).
20070510 ChangeLog,Makefile.am,README,configure.in,doc/{libspectrum.3,
	 libspectrum.txt}: updates for 0.3.0.1 release
	 (libspectrum_0_3_0-branch).
20070511 TAG: libspectrum_0_3_0_1 (libspectrum_0_3_0-branch)
20070512 doc/cvs-tags: document merge back to trunk (libspectrum_0_3_0-branch)
20070512 Merge changes from libspectrum_0_3_0-branch to HEAD.
20070512 TAG: libspectrum_0_3_0-merge-1
20070513 make-perl.c,tap.c,tape_accessors.pl: Fix filenames in comments
         (patch #1716201) (Stuart Brady).
20070513 Makefile.am,configure.in,test/{.cvsignore,Makefile.am,invalid.tzx,
	 test.c}: add first automated test for bugs #1479451 and #1706994
	 (Philip Kendall).
20070516 tape.c,tzx_read.c,test/{test.c,turbo-zeropilot.tzx}: don't produce
	 a pilot if none present in TZX turbo block, and free a TZX turbo
	 block with no data correctly (fixes bugs #1720238 and #1720270).
20070518 tzx_write.c: add write support for TZX direct recording block (Fred).
20070518 Makefile.am,configure.in,doc/Makefile.am,hacking/Makefile.am,
         myglib/{.cvsignore,Makefile.am},test/{.cvsignore,Makefile.am}:
         make sure libspectrum is built before test by switching to a 
         non-recursive make with full dependency graph (Fred).
20070520 test/test.c: fix warnings in test build (Fred).
20070520 Remove .cvsignore files.
20070522 internals.h,libspectrum.h.in,tap.c,tape.c,tzx_read.c,tzx_write.c,
         warajevo_read.c: mark deprecated tape functions as such and add
         wrappers so that libspectrum_tape_read doesn't have to call
         deprecated functions (Fred).
20070522 Mark mkinstalldirs as an ignored file (Fred).
20070522 rzx.c: fix printf warning and comment (Fred).
20070526 tape.c,test/test.c: allow for uninitialised buffer on entry to
	 libspectrum_tape_write() (fixes bugs #1725864) (thanks, Dave Mills).
20070526 <almost everything>: update FSF address in GPL notices (Stuart).